# oh-my-monorepo

./: .gitignore  .nxignore  AGENTS.md  CONTRIBUTING.md  OKS-SYSTEM.md  PROGRESS.md  README.md  Spec-Kit-cn.md  biome.json  knip.json  nx.json  opencode.json  package-lock.json  package.json  pdf-style.css  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
forks/spec-kit-cn/: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  TERMINOLOGY.md  TRANSLATION_STANDARDS.md  pyproject.toml  quality-check.sh  spec-driven.md
forks/spec-kit-cn/.claude/commands/: punctuation-fix.md  translation-auto.md  translation-detect.md  translation-execute.md  translation-fix.md  translation-qa.md  translation-review.md  translation-sync.md  translation-workflow.md
forks/spec-kit-cn/.github/: PULL_REQUEST_TEMPLATE.md
forks/spec-kit-cn/.github/ISSUE_TEMPLATE/: agent_request.yml  bug_report.yml  config.yml  extension_submission.yml
forks/spec-kit-cn/.github/workflows/: docs.yml  test.yml
forks/spec-kit-cn/docs/: README.md  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
forks/spec-kit-cn/extensions/: EXTENSION-API-REFERENCE.md  EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-PUBLISHING-GUIDE.md  EXTENSION-USER-GUIDE.md  README.md  RFC-EXTENSION-SYSTEM.md
forks/spec-kit-cn/extensions/template/: CHANGELOG.md  EXAMPLE-README.md  README.md
forks/spec-kit-cn/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
(+236 files in other folders)
